# Christiano_Roboto

./: readme.md
ainex_project/install/: local_setup.sh  setup.sh
ainex_project/install/ainex_description/share/ainex_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ainex_project/install/ainex_description/share/ainex_description/cmake/: ainex_descriptionConfig-version.cmake  ainex_descriptionConfig.cmake
ainex_project/install/simulator/share/simulator/: package.sh  package.xml
ainex_project/install/whole_body_control/lib/whole_body_control/: 02_one_leg_stand  03_squating  t4_standing  t51  t52
ainex_project/install/whole_body_control/share/whole_body_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ainex_project/log/: latest_build
ainex_project/src/ainex_description/: CMakeLists.txt  package.xml
ainex_project/src/ainex_description/robots/: ainex.urdf
ainex_project/src/simulator/: setup.py
ainex_project/src/simulator/simulator/: pybullet_wrapper.py
ainex_project/src/whole_body_control/: package.xml  setup.cfg  setup.py
ainex_project/src/whole_body_control/launch/: launch.py
ainex_project/src/whole_body_control/whole_body_control/: config.py  simple_standing_controller.py  t4_standing_without_pybullet.py  t51.py  vic
ros_ws_t7/install/: local_setup.sh  setup.sh
ros_ws_t7/install/bullet_sims/lib/bullet_sims/: foot_trajectory  footstep_planner  lip_mpc  t41  t42  t43  t44  t51  talos  test  walking
ros_ws_t7/install/bullet_sims/share/bullet_sims/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws_t7/install/interactiveMarkerNode/lib/interactiveMarkerNode/: interactiveMarkerNode
ros_ws_t7/install/interactiveMarkerNode/share/interactiveMarkerNode/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws_t7/install/reemc_description/share/reemc_description/: local_setup.sh  package.sh
ros_ws_t7/install/ros_visuals/share/ros_visuals/: package.sh
ros_ws_t7/install/simulator/share/simulator/: package.dsv  package.ps1  package.sh  package.xml
ros_ws_t7/install/talos_description/share/talos_description/: local_setup.sh  package.sh
ros_ws_t7/log/: latest_build
ros_ws_t7/src/: doc.txt  questions.txt
ros_ws_t7/src/bullet_sims/: CMakeLists.txt  setup.py
ros_ws_t7/src/bullet_sims/bullet_sims/: foot_trajectory.py  footstep_planner.py  talos.py  talos_conf.py  test.py  tsid_wrapper.py  walking.py
ros_ws_t7/src/interactiveMarkerNode/: setup.cfg  setup.py
ros_ws_t7/src/ros_visuals/: package.xml  setup.py
ros_ws_t7/src/ros_visuals/launch/: talos_rviz.launch.py
ros_ws_t7/src/simulator/: CMakeLists.txt  setup.py
(+37 files in other folders)
