<?xml version="1.0"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.0</version>
  <description>Pybullet simulation package</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>python3-pybullet</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
   <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>xacro</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
